[project]
name = "edu.princeton.tango"
version = "0.0.1"
authors = [
    { name = "Benjamin Herber", email = "bherber@princeton.edu" },
    { name = "Maria Apostolaki", email = "apostolaki@princeton.edu" },
    { name = "Henry Birge-Lee", email = "birgelee@princeton.edu " },
]
description = "An entrypoint to the Tango cooperative peer routing solution"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["pyyaml >= 6.0, < 7", "click >= 8.1.3, < 9"]

[project.optional-dependencies]
dev = [
    "pytest >= 7.2.2, < 8",
    "pytest-xdist >= 3.2.1, < 4",
    "black >= 23.1.0, < 24",
    "isort >= 5.12.0, < 6",
    "tox >= 4.4.6, < 5",
    "ruff >= 0.0.254, < 1"
]

[project.urls]
"Homepage" = "https://github.com/PrincetonUniversity/tango-routing"
"Bug Tracker" = "https://github.com/PrincetonUniversity/tango-routing/issues"

[build-system]
requires = ["setuptools>=67.5.1"]
build-backend = "setuptools.build_meta"

[project.scripts]
tango = "edu.princeton.tango.cli:cli"

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.black]
line-length = 100
exclude = """
/(
    .eggs
  | .git
  | .hg
  | .mypy_cache
  | .tox
  | .venv
  | _build
  | buck-out
  | build
  | dist
)/
"""

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 100

[tool.ruff]
select = ["ALL"]
ignore = [
    "PLR0913",
    "TRY003",
    "EM101",
    "BLE001",
    "C901",
    "PLR2004",
    "EM102",
    "PD011",
    "S101"
]
line-length = 100
